# TED

./: .gitignore  CMakeLists.txt  Makefile  MakefileOLD  Readme.adoc  ted  ted.c
.cache/clangd/index/: ted.c.B815A9A42D0F7000.idx
include/: appendBuf.h  data.h  defines.h  editor.h  fileio.h  filetypes.h  find.h  input.h  output.h  rowop.h  syntax.h  terminal.h
src/: appendBuf.c  editor.c  fileio.c  filetypes.c  find.c  input.c  output.c  rowop.c  syntax.c  ted.c  terminal.c
ted.dSYM/Contents/: Info.plist
ted.dSYM/Contents/Resources/DWARF/: ted
